--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
            Main Content Area
         </div>
         <footer>
-           Footer Areaa
+           Footer Area
         </footer>
     </div>
 </body>
