--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
         </nav>
         <div>
            Main Content Area
+           <p>Maejo University</p>
+           <h2>คณะวิทยาศาสตร์</h2>
+           <p>สาขาวิชาวิทยาการคอมพิวเตอร์</p>
+           <div>
+            <h3>ข่าว 1</h3>
+            <p>วันที่ dd/mm/yyyy</p>
+           </div>
+                      <div>
+            <h3>ข่าว 2</h3>
+            <p>วันที่ dd/mm/yyyy</p>
+           </div>
+                      <div>
+            <h3>ข่าว 3</h3>
+            <p>วันที่ dd/mm/yyyy</p>
+           </div>
         </div>
         <footer>
            Footer Area
