--- a/index.html
+++ b/index.html
@@ -11,13 +11,40 @@
            <h1>Header Area</h1>
         </header>
         <nav>
-           Navigation Area
+           <ul>
+            <li><a href="/about.html">About</a>></li><br>
+            <li><a href="/contact.html">About</a></li><br>
+            <li><a href="https://www.google.com">Google</a>></li><br>
+           </ul>
         </nav>
         <div>
+           Hi
            Main Content Area
            <p>Maejo University</p>
            <h2>คณะวิทยาศาสตร์</h2>
            <p>สาขาวิชาวิทยาการคอมพิวเตอร์</p>
+           <img src="image/fish.jpg" alt="รูปปลา"widgth="300"height="400">
+           <img src="https://erp.mju.ac.th/openFile.aspx?id=NzE3MzI0&method=inline"alt="pic"widgth="300"height="400">
+
+           <h3>ตารางรายชื่อนักศึกษา</h3>
+           <table border ="1">
+             <thead>
+                <tr>
+                    <th>รหัสนักศึกษา</th>
+                    <th>ชื่อ-นามสกุล</th>
+                    <th>สาขา</th>
+                </tr>
+             </thead>
+             <tbody>
+                <tr>
+                    <td>6704101333</td>
+                    <td>นาย ธนวัต โวโลชึ่น</td>
+                    <td>วิทยาการคอมพิวเตอร์</td>
+
+                </tr>
+             </tbody>
+           </table>
+
            <div>
             <h3>ข่าว 1</h3>
             <p>วันที่ dd/mm/yyyy</p>
